
name:                retoolkit
version:             0.1.0.0
description:         another reverse engineering toolkit
license:             GPL
license-file:        LICENSE
author:              SD
maintainer:          ktion23@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library rekitlib
 hs-source-dirs: src
 Exposed-modules:
            Ast
            , Asm
            , Symbolic
            , Util
            , Lifter
            , AstContext
            , X86Sem
            , EvalAst

 build-depends:     base >=4.5 && <9.8
                    , containers
                    , bytestring
                    , binary
                    , hapstone >= 0.2.0.1
 default-language:  Haskell2010

executable rekit_cli
 hs-source-dirs: src
 main-is:           Main.hs
 other-modules:
            Ast
            , Asm
            , Symbolic
            , Util
            , Lifter
            , AstContext
            , X86Sem
            , EvalAst

 build-depends:     base >=4.5 && <9.8
                    , containers
                    , bytestring
                    , binary
                    , hapstone >= 0.2.0.1
 default-language:  Haskell2010

test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs:
       test
   ghc-options: -Wall
   build-depends:         base,
                          tasty,
                          tasty-hunit,
                          tasty-smallcheck,
                          HUnit,
                          smallcheck,
                          rekitlib
   default-language: Haskell2010
 build-tool-depends: hspec-discover:hspec-discover == 2.*
